*SWAGGER* Change Comment like response on LikeResponse
