# server-go/doc/swagger/swagger.yaml
@@ -440,9 +440,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: Number of likes
+          description: Number of likes and isLikedMe
           schema:
-            type: integer
+            $ref: '#/definitions/controller.LikeResponse'
         "400":
           description: Bad Request
           schema:
